[package]
name = "ecs-demo"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]

[dependencies]
cgmath = "0.16.1"
lime-render = { git = "https://github.com/andrewhickman/lime" }
lime-utils = { git = "https://github.com/andrewhickman/lime" }
lime-main-loop = { git = "https://github.com/andrewhickman/lime" }
specs = "0.12.0"
specs-derive = "0.2.0"
shrev = "1.0.1"
env_logger = "0.5.10"
winit = "0.16.2"
rand = "0.5.4"
console = "0.6.1"